--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.app-container {
+  width: 100vw !important;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -27,6 +31,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
+  width: 100vw !important;
   min-height: 100vh;
 }
 
